--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ header h1 a {
   text-decoration: none;
   font-weight: 400;
 }
-header header h1 a:hover {
+header h1 a:hover {
   background-color: rgb(221, 229, 182);
   border: 2px;
   border-radius: 12px;
