--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,18 +16,19 @@ header{
     text-align: center;
     margin-top: 2px;
 
-    h1 a{
-        font-size: 64px;
-        color: black;
-        text-decoration: none;
-        font-weight: 400;
-    }
-
-    header h1 a:hover{
-        background-color: rgb(221, 229, 182);
-        border: 2px;
-        border-radius: 12px;
-        border-style: groove;
+    h1{
+        a{
+            font-size: 64px;
+            color: black;
+            text-decoration: none;
+            font-weight: 400;
+        }
+        a:hover{
+            background-color: rgb(221, 229, 182);
+            border: 2px;
+            border-radius: 12px;
+            border-style: groove;
+        }
     }
 }
 
@@ -49,14 +50,13 @@ main{
 
     ul{
         list-style: none;
-    }
-
-    ul a{
-        font-size: 36px;
-        color: black;
-        text-decoration: none;
-        font-weight: 300;
-        text-align: center;
+        a{
+            font-size: 36px;
+            color: black;
+            text-decoration: none;
+            font-weight: 300;
+            text-align: center;
+        }
     }
 
     .padre{
@@ -127,12 +127,14 @@ footer{
     bottom: 0;
     margin-top: 24px;
 
-    h3 a{
-        font-size: 36px;
-        color: black;
-        text-decoration: none;
-        font-weight: 400;
-        margin: 50px;
+    h3{
+        a{
+            font-size: 36px;
+            color: black;
+            text-decoration: none;
+            font-weight: 400;
+            margin: 50px;
+        }
     }
 
     #if{
