--- a/scss/app.scss
+++ b/scss/app.scss
@@ -22,12 +22,12 @@ header{
             color: black;
             text-decoration: none;
             font-weight: 400;
-        }
-        a:hover{
-            background-color: rgb(221, 229, 182);
-            border: 2px;
-            border-radius: 12px;
-            border-style: groove;
+            &:hover{
+                background-color: rgb(221, 229, 182);
+                border: 2px;
+                border-radius: 12px;
+                border-style: groove;
+            }
         }
     }
 }
@@ -103,11 +103,6 @@ main{
     button{
         background-color: black  !important;
         border-color: black !important;
-    }
-    
-    button:hover{
-        background-color: white  !important;
-        color: black !important;
     }
     
     .mapa{
