--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,130 +9,6 @@ body{
     background-color: rgb(240, 234, 210);
 }
 
-header{
-    height: auto;
-    width: 100%;
-    background-color: rgb(173, 193, 120);
-    text-align: center;
-    margin-top: 2px;
-
-    h1{
-        a{
-            font-size: 64px;
-            color: black;
-            text-decoration: none;
-            font-weight: 400;
-            &:hover{
-                background-color: rgb(221, 229, 182);
-                border: 2px;
-                border-radius: 12px;
-                border-style: groove;
-            }
-        }
-    }
-}
-
-main{
-    h2{
-        font-size: 48px;
-        color: black;
-        font-weight: 400;
-        text-align: center;
-        margin: 24px;
-    }
-
-    #hero{
-        display: flex; 
-        flex-direction: row; 
-        justify-content: center; 
-        margin: 50px;
-    }
-
-    ul{
-        list-style: none;
-        a{
-            font-size: 36px;
-            color: black;
-            text-decoration: none;
-            font-weight: 300;
-            text-align: center;
-        }
-    }
-
-    .padre{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    
-    .hijo{
-        margin: 24px;
-    }
-
-    p{
-        font-size: 36px;
-        color: black;
-        font-weight: 300;
-        text-align: center;
-        margin: 24px;
-    }
-
-    #museum{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        place-items: center;
-        margin: 50px;
-    }
-
-    .photo{
-        width: 500px;
-        height: 500px;
-    }
-    
-    form{
-        width: 500px;
-        background-color: white;
-        padding: 24px;
-        margin: auto;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        border-radius: 12px;
-        text-align: center;
-    }
-    
-    button{
-        background-color: black  !important;
-        border-color: black !important;
-    }
-    
-    .mapa{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 50px;
-    }
-}
-
-footer{
-    height: auto;
-    width: 100%;
-    background-color: rgb(221, 229, 182);
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    margin-top: 24px;
-
-    h3{
-        a{
-            font-size: 36px;
-            color: black;
-            text-decoration: none;
-            font-weight: 400;
-            margin: 50px;
-        }
-    }
-
-    #if{
-        position: absolute;
-    }
-}
+@import './layout/header.scss';
+@import './layout/main.scss';
+@import './layout/footer.scss';
