--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,14 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    box-sizing: border-box;
-}
-
-body{
-    background-color: rgb(240, 234, 210);
-}
-
+@import './general/reset.scss';
+@import './layout/body.scss';
 @import './layout/header.scss';
 @import './layout/main.scss';
 @import './layout/footer.scss';
