--- a/scss/layout/body.scss
+++ b/scss/layout/body.scss
@@ -1,3 +1,19 @@
 body{
-    background-color: rgb(240, 234, 210);
+    background-image: linear-gradient(135deg, f0ead2, dde5b6, adc178, a98467, 6c584c);
+    background-size: 500%;
+    animation: fanimado 10s infinite;
+}
+
+@keyframes fanimado{
+    0%{
+        background-position: 0% 50%;
+    }
+
+    50%{
+        background-position: 100% 50%;
+    }
+
+    100%{
+        background-position: 0% 50%;
+    }
 }
