--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@
 }
 
 body {
-  background-image: linear-gradient(135deg, f0ead2, dde5b6, adc178, a98467, 6c584c);
+  background-image: linear-gradient(135deg, #f0ead2, #dde5b6, #adc178, #a98467, #6c584c);
+  background-size: 500%;
   animation: fanimado 10s infinite;
 }
 
@@ -24,7 +25,7 @@ body {
 header {
   height: auto;
   width: 100%;
-  background-color: rgb(173, 193, 120);
+  background-color: #adc178;
   text-align: center;
   margin-top: 2px;
 }
@@ -113,7 +114,7 @@ main .mapa {
 footer {
   height: auto;
   width: 100%;
-  background-color: rgb(221, 229, 182);
+  background-color: #dde5b6;
   text-align: center;
   position: relative;
   bottom: 0;
