--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,7 +1,7 @@
 footer{
     height: auto;
     width: 100%;
-    background-color: rgb(221, 229, 182);
+    background-color: #dde5b6;
     text-align: center;
     position: relative;
     bottom: 0;
