--- a/scss/layout/header.scss
+++ b/scss/layout/header.scss
@@ -1,7 +1,7 @@
 header{
     height: auto;
     width: 100%;
-    background-color: rgb(173, 193, 120);
+    background-color: #adc178;
     text-align: center;
     margin-top: 2px;
 
