--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   background-image: linear-gradient(135deg, #f0ead2, #dde5b6, #adc178, #a98467, #6c584c);
   background-size: 500%;
@@ -112,11 +113,10 @@ main .mapa {
 }
 
 footer {
-  position: sticky;
+  position: absolute;
   bottom: 0;
   width: 100%;
   background-color: #dde5b6;
-  padding: 20px;
   text-align: center;
 }
 footer h3 a {
