--- a/scss/layout/body.scss
+++ b/scss/layout/body.scss
@@ -1,4 +1,5 @@
 body{
+    position: relative;
     min-height: 100vh;
     background-image: linear-gradient(135deg, #f0ead2, #dde5b6, #adc178, #a98467, #6c584c);
     background-size: 500%;
