--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,9 +1,8 @@
 footer{
-    position: sticky;
+    position: absolute;
     bottom: 0;
     width: 100%;
     background-color: #dde5b6;
-    padding: 20px;
     text-align: center;
 
     h3{
