--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ main .mapa {
 }
 
 footer {
-  position: absolute;
+  position: absolute !important;
   bottom: 0;
   width: 100%;
   background-color: #dde5b6;
